tests/k8s_testcases/network-policy-checks-bad-path/peer_podselector_wrong_type.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: peer-podselector-test-type
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: helm
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
       # wrong type
      - podSelector:
         - matchLabels:
            tier: frontend
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              unique-label: dummy
